# youtube-chapter-generator

api/: pyproject.toml
api/api/: main.py
api/tests/fixtures/shared/: intervals.json
ui/: README.md  angular.json  notes_on_youtube_api.md  package-lock.json  package.json
ui/src/: index.html  proxy.conf.json  styles.scss
ui/src/app/: app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  common.ts
ui/src/app/animations/: route-transitions.ts
ui/src/app/app/services/: video.service.ts
ui/src/app/components/llm-result/: llm-result.component.spec.ts  llm-result.component.ts
ui/src/app/components/llm-settings/: llm-settings.component.html  llm-settings.component.spec.ts  llm-settings.component.ts
ui/src/app/components/test-player-controls/: test-player-controls.component.html  test-player-controls.component.scss  test-player-controls.component.spec.ts  test-player-controls.component.ts
ui/src/app/components/transcript-complexity/: transcript-complexity.component.html  transcript-complexity.component.spec.ts  transcript-complexity.component.ts
ui/src/app/components/transcript-item/: transcript-item.component.html  (+2 more)
ui/src/app/directives/: you-tube-player-controller.directive.spec.ts  you-tube-player-controller.directive.ts
ui/src/app/resolvers/: transcript.resolver.spec.ts  transcript.resolver.ts  video.resolver.spec.ts  video.resolver.ts
ui/src/app/services/: video.service.ts  yt-player.service.ts  yt-transcript.service.spec.ts  yt-transcript.service.ts
ui/src/app/validators/: YouTubeUrlValidator.ts
(+20 files in other folders)
